--- a/Index.html
+++ b/Index.html
@@ -96,6 +96,6 @@
 
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./logic.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
